--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
 		height: 100%;
 		margin: 0;
 		padding: 0;
+		overflow-x: hidden;
 		display: grid;
 		grid-template-rows: 21vw 1fr;
 		grid-template-columns: 10% 80% 10%;
@@ -145,6 +146,7 @@ body{
 	.container_slider{
 		height: 10vw;
 		background-color: #cc99aa;
+		overflow-x: hidden;
 	}
 
 	h1{
@@ -333,6 +335,7 @@ body{
 		height: 100%;
 		margin: 0;
 		padding: 0;
+		overflow-x: hidden;
 		display: grid;
 		grid-template-rows: 12vw 1fr;
 		grid-template-columns: 20% 60% 20%;
@@ -467,6 +470,7 @@ body{
 	.container_slider{
 		height: 5vw;
 		background-color: #cc99aa;
+		overflow-x: hidden;
 	}
 
 	h1{
@@ -655,6 +659,7 @@ body{
 		height: 100%;
 		margin: 0;
 		padding: 0;
+		overflow-x: hidden;
 		display: grid;
 		grid-template-rows: 7.5vw 1fr;
 		grid-template-columns: 10% 80% 10%;
