--- a/portrait.css
+++ b/portrait.css
@@ -13,7 +13,7 @@ body{
 		padding: 0;
 		overflow-x: hidden;
 		display: grid;
-		grid-template-rows: 21vw 21vw 1fr;
+		grid-template-rows: 21vw 21vw 211fr;
 		grid-template-columns: 10% 80% 10%;
 		position: absolute;
 		top: 0;
@@ -314,6 +314,11 @@ body{
 	    left: 90%;
 	  }
 
+	.bi{
+		height: 4vw;
+		width: 4vw;
+	}
+
 	@keyframes scroll {
 	  0% {
 	    top: 45%;
@@ -339,7 +344,7 @@ body{
 		overflow-x: hidden;
 		display: grid;
 		grid-template-rows: 12vw 12vw 1fr;
-		grid-template-columns: 20% 60% 20%;
+		grid-template-columns: 10% 80% 10%;
 		position: absolute;
 		top: 0;
 	}
@@ -354,8 +359,7 @@ body{
 	}
 
 	.container_center{
-		margin: 0;
-		padding: 1%;
+		margin-top: 0.5vw;
 		background-color: #fff;
 		overflow: overlay;
 		display: grid;
@@ -387,7 +391,7 @@ body{
 		margin: 0;
 		padding: 0;
 		background-color: #fff;
-		border-bottom: 0.4vw solid #b37288;
+		border-bottom: 0.8vw solid #b37288;
 		display: grid;
 		grid-template-rows: 15% 70% 15%;
 		grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
@@ -410,7 +414,7 @@ body{
 		text-align: center;
 		vertical-align: center;
 	    font-family: calibri,sans-serif;
-	    font-size: 4vw;
+	    font-size: 7vw;
 	    color: #00b57e;
 		text-decoration: none;
 		transition: color 0.5s;	
@@ -445,7 +449,7 @@ body{
 		text-align: center;
 		vertical-align: center;
 	    font-family: calibri,sans-serif;
-	    font-size: 4vw;
+	    font-size: 6vw;
 	    padding: 0vh 0.5vw;
 	    color: #00b57e;
 	    background-color: #fff;
@@ -463,7 +467,7 @@ body{
 	.lien_bouton{
 		grid-row-start: 2;
 		grid-row-end: 3;
-		grid-column-start: 9; 
+		grid-column-start: 8; 
 		grid-column-end: 11;
 	}
 
@@ -485,7 +489,7 @@ body{
 	}
 
 	.s1{
-		font-size: 5vw;
+		font-size: 7vw;
 		color: #fff;
 	}
 
@@ -591,7 +595,7 @@ body{
 	h2{	
 		margin: 0;
 		padding: 0;
-		font-size: 5vw;
+		font-size: 7vw;
 		color: #00b57e;
 		font-family: calibri;
 		text-align: center;
@@ -599,7 +603,7 @@ body{
 	}
 
 	p{
-		font-size: 3.5vw;
+		font-size: 5vw;
 		color: #6b6b6b;
 		padding-bottom: 2vh;
 		font-family: calibri;
@@ -627,7 +631,7 @@ body{
 	.h3 {
 	    text-align: left;
 	    font-family: sans-serif;
-	    font-size: 3vw;
+	    font-size: 5vw;
 	    color: #cc99aa;
 	    user-select: none;
 	    writing-mode: vertical-rl;
@@ -636,8 +640,13 @@ body{
 	    animation-iteration-count: infinite;
 	    animation-name: scroll;
 	    position: absolute;
-	    left: 90%;
-	  }
+	    left: 87%;
+	}
+
+	.bi{
+		height: 5vw;
+		width: 5vw;
+	}
 
 	@keyframes scroll {
 	  0% {
@@ -709,7 +718,7 @@ body{
 		background-color: #fff;
 		border-bottom: 0.3vw solid #b37288;
 		display: grid;
-		grid-template-rows: 15% 70% 15%;
+		grid-template-rows: 10% 80% 10%;
 		grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
 		position: relative;
 		top: 0;
@@ -729,7 +738,7 @@ body{
 	.link{
 		text-align: center;
 	    font-family: calibri,sans-serif;
-	    font-size: 3vw;
+	    font-size: 5vw;
 	    color: #00b57e;
 		text-decoration: none;
 		transition: color 0.5s;	
@@ -749,8 +758,8 @@ body{
 	.l2{
 		grid-row-start: 2;
 		grid-row-end: 3;
-		grid-column-start: 5; 
-		grid-column-end: 7;
+		grid-column-start: 4; 
+		grid-column-end: 8;
 	}
 
 	.l3{
@@ -763,7 +772,7 @@ body{
 	.b1{
 		text-align: center;
 	    font-family: calibri,sans-serif;
-	    font-size: 3vw;
+	    font-size: 5vw;
 	    padding: 0vh 0.5vw;
 	    color: #00b57e;
 	    background-color: #fff;
@@ -776,7 +785,7 @@ body{
 
 	.b1:hover{
 	    color: #cc99aa;
-	  }
+	}
 
 	.lien_bouton{
 		grid-row-start: 2;
@@ -908,7 +917,7 @@ body{
 	h2{	
 		margin: 0;
 		padding: 0;
-		font-size: 3vw;
+		font-size: 4vw;
 		color: #00b57e;
 		font-family: calibri;
 		text-align: center;
@@ -916,7 +925,7 @@ body{
 	}
 
 	p{
-		font-size: 2vw;
+		font-size: 3vw;
 		color: #6b6b6b;
 		padding-bottom: 2vh;
 		font-family: calibri;
@@ -954,7 +963,12 @@ body{
 	    animation-name: scroll;
 	    position: absolute;
 	    left: 90%;
-	  }
+	}
+
+	.bi{
+		height: 2vw;
+		width: 2vw;
+	}
 
 	@keyframes scroll {
 	  0% {
