--- a/portrait.css
+++ b/portrait.css
@@ -5,985 +5,177 @@ body{
 	overflow-x: hidden;
 }
 
-@media screen and (min-width: 0px){
-	.container_all{
-		width: 100%;
-		height: 100%;
-		margin: 0;
-		padding: 0;
-		overflow-x: hidden;
-		display: grid;
-		grid-template-rows: 21vw 21vw 211fr;
-		grid-template-columns: 10% 80% 10%;
-		position: absolute;
-		top: 0;
-	}
-
-	.header{
-		margin: 0;
-		padding: 0;
-		grid-row-start: 1;
-		grid-row-end: 3;
-		grid-column-start: 1;
-		grid-column-end: 4;
-	}
-
-	.container_center{
-		margin: 0;
-		padding: 1%;
-		background-color: #fff;
-		overflow: overlay;
-		display: grid;
-		grid-template-rows: none 1fr;
-		grid-template-columns: 1fr;
-		grid-column-gap: 2%;
-		grid-row-start: 3;
-		grid-row-end: 4;
-		grid-column-start: 2;
-		grid-column-end: 3;
-	}
-
-	.right_pannel{
-		width: 10%;
-		height: 81.65%;
-		margin: 0;
-		padding: 0;
-		animation-name: spawn;
-		animation-duration: 5s;
-		grid-row-start: 2;
-		grid-row-end: 3;
-		grid-column-start: 3;
-		grid-column-end: 4;
-	}
-
-	/*-----CONTENU HEADER-----*/
-	.header_content{
-		width: 100%;
-		height: 20.5vw;
-		margin: 0;
-		padding: 0;
-		background-color: #fff;
-		border-bottom: 0.7vw solid #b37288;
-		display: grid;
-		grid-template-rows: 15% 70% 15%;
-		grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
-		position: relative;
-		top: 0;
-		left: 0;
-	}
-
-	.logo{
-		height: 100%;
-		width: auto;
-		padding-left: 5%;
-		grid-row-start: 1;
-		grid-row-end: 4;
-		grid-column-start: 1; 
-		grid-column-end: 3;
-	}
-
-	.link{
-		text-align: center;
-		vertical-align: center;
-	    font-family: calibri,sans-serif;
-	    font-size: 7vw;
-	    color: #00b57e;
-		text-decoration: none;
-		transition: color 0.5s;	
-	}
-
-	.link:hover{
-		color: #cc99aa;
-	}
-
-	.l1{
-		grid-row-start: 2;
-		grid-row-end: 3;
-		grid-column-start: 3; 
-		grid-column-end: 5;
-	}
-
-	.l2{
-		grid-row-start: 2;
-		grid-row-end: 3;
-		grid-column-start: 4; 
-		grid-column-end: 8;
-	}
-
-	.l3{
-		grid-row-start: 2;
-		grid-row-end: 3;
-		grid-column-start: 7; 
-		grid-column-end: 9;
-	}
-
-	.b1{
-		text-align: center;
-	    font-family: calibri,sans-serif;
-	    font-size: 6vw;
-	    padding: 0vh 0.5vw;
-	    color: #00b57e;
-	    background-color: #fff;
-	    border: 0.5vw solid #00b57e;
-	    border-radius: 10vw;
-	    outline: none; 
-	    user-select: none;
-	    transition: color 0.5s;
-	}
-
-	.b1:hover{
-	    color: #cc99aa;
-	  }
-
-	.lien_bouton{
-		grid-row-start: 2;
-		grid-row-end: 3;
-		grid-column-start: 8; 
-		grid-column-end: 11;
-	}
-
-	/*----- Slider -----*/
-	.container_slider{
-		height: 20.5vw;
-		background-color: #cc99aa;
-		overflow-x: hidden;
-	}
-
-	h1{
-		font-size: 3.6vw;
-		font-family: cursive;
-		margin: 0;
-		text-align: center;
-		vertical-align: center;
-		user-select: none;
-		position: relative;
-	}
-
-	.s1{
-		font-size: 10vw;
-		color: #fff;
-	}
-
-	.c1{
-	width: 100%;
-	animation-name: aa;
-	animation-duration: 8s;
-	animation-iteration-count: infinite;
-	position: absolute;
-	left: 100%;
-	}
-
-	@keyframes aa{
-
-		50%{
-			left: 0%;
-		}
-
-		100%{
-			left: -100%;
-		}
-	}
-
-	.s2{
-		font-size: 6vw;
-		color: #fff;	
-	}
-
-	.c2{
-		width: 100%;
-		animation-name: ab;
-		animation-duration: 8s;
-		animation-delay: 4s;
-		animation-iteration-count: infinite;
-		position: absolute;
-		left: 100%;
-	}
-
-	@keyframes ab{
-
-		50%{
-			left: 0%;
-		}
-
-		100%{
-			left: -100%;
-		}
-	}
-
-	/*----- Fin Slider -----*/
-	/*-----FIN CONTENU HEADER-----*/
-
-
-	/*-----CONTENU CENTER-----*/
-	.al{
-		width: 100%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
-		animation-name: spawn;
-		animation-duration: 5s;
-	}
-
-	.ac{
-		width: 100%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
-		animation-name: spawn;
-		animation-duration: 5s;
-	}
-
-	.ar{
-		width: 100%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
-		animation-name: spawn;
-		animation-duration: 5s;
-	}
-
-	.alc{
-		width: 100%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
-		animation-name: spawn;
-		animation-duration: 5s;
-	}
-
-	.acr{
-		width: 100%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
-		animation-name: spawn;
-		animation-duration: 5s;
-	}
-
-	.alcr{
-		width: 100%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
-		animation-name: spawn;
-		animation-duration: 5s;
-	}
-
-	h2{	
-		margin: 0;
-		padding: 0;
-		font-size: 8vw;
-		color: #00b57e;
-		font-family: calibri;
-		text-align: center;
-		user-select: none;
-	}
-
-	p{
-		font-size: 6vw;
-		color: #6b6b6b;
-		padding-bottom: 2vh;
-		font-family: calibri;
-		text-align: center;
-		user-select: none;
-	}
-
-	@keyframes spawn{
-		0%{
-			opacity: 0%;
-		}
-
-		100%{
-			opacity: 100%
-		}
-	}
-
-	img,iframe{
-		max-width: 100%;
-	}
-	/*-----FIN CONTENU CENTER-----*/
-
-
-	/*-----CONTENU RIGHT-----*/
-	.h3 {
-	    text-align: center;
-	    font-family: sans-serif;
-	    font-size: 4vw;
-	    color: #cc99aa;
-	    user-select: none;
-	    writing-mode: vertical-rl;
-	    text-orientation: mixed;
-	    animation-duration: 5s;
-	    animation-iteration-count: infinite;
-	    animation-name: scroll;
-	    position: absolute;
-	    left: 90%;
-	  }
-
-	.bi{
-		height: 4vw;
-		width: 4vw;
-	}
-
-	@keyframes scroll {
-	  0% {
-	    top: 45%;
-	  }
-
-	  50% {
-	    top: 55%;
-	  }
-
-	  100% {
-	    top: 45%;
-	  }
-	}
-	/*-----FIN CONTENU RIGHT-----*/
+.header{
+	height: 26vw;
+	width:  100%;
+	background-color: #000;
+	box-shadow: 0 0 4vw #000;
+	z-index: 2;
+	position: fixed;
 }
 
-@media screen and (min-width: 800px){
-	.container_all{
+	.header > .c_1 {
+		height: 14vw;
 		width: 100%;
-		height: 100%;
-		margin: 0;
-		padding: 0;
-		overflow-x: hidden;
-		display: grid;
-		grid-template-rows: 12vw 12vw 1fr;
-		grid-template-columns: 10% 80% 10%;
-		position: absolute;
-		top: 0;
-	}
-
-		.header{
-		margin: 0;
-		padding: 0;
-		grid-row-start: 1;
-		grid-row-end: 3;
-		grid-column-start: 1;
-		grid-column-end: 4;
-	}
-
-	.container_center{
-		margin-top: 0.5vw;
 		background-color: #fff;
-		overflow: overlay;
-		display: grid;
-		grid-template-rows: none 1fr;
-		grid-column-gap: 2%;
-		grid-row-start: 3;
-		grid-row-end: 4;
-		grid-column-start: 2;
-		grid-column-end: 3;
-	}
-
-	.right_pannel{
-		width: 20%;
-		height: 81.65%;
-		margin: 0;
-		padding: 0;
-		animation-name: spawn;
-		animation-duration: 5s;
-		grid-row-start: 2;
-		grid-row-end: 3;
-		grid-column-start: 3;
-		grid-column-end: 4;
-	}
-
-	/*-----CONTENU HEADER-----*/
-	.header_content{
-		width: 100%;
-		height: 13vw;
-		margin: 0;
-		padding: 0;
-		background-color: #fff;
-		border-bottom: 0.8vw solid #b37288;
-		display: grid;
-		grid-template-rows: 15% 70% 15%;
-		grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
-		position: relative;
-		top: 0;
-		left: 0;
-	}
-
-	.logo{
-		height: 100%;
-		width: auto;
-		padding-left: 5%;
-		grid-row-start: 1;
-		grid-row-end: 4;
-		grid-column-start: 1; 
-		grid-column-end: 3;
-	}
-
-	.link{
-		text-align: center;
-		vertical-align: center;
-	    font-family: calibri,sans-serif;
-	    font-size: 7vw;
-	    color: #00b57e;
-		text-decoration: none;
-		transition: color 0.5s;	
-	}
-
-	.link:hover{
-		color: #cc99aa;
-	}
-
-	.l1{
-		grid-row-start: 2;
-		grid-row-end: 3;
-		grid-column-start: 3; 
-		grid-column-end: 5;
-	}
-
-	.l2{
-		grid-row-start: 2;
-		grid-row-end: 3;
-		grid-column-start: 4; 
-		grid-column-end: 8;
-	}
-
-	.l3{
-		grid-row-start: 2;
-		grid-row-end: 3;
-		grid-column-start: 7; 
-		grid-column-end: 9;
-	}
-
-	.b1{
-		text-align: center;
-		vertical-align: center;
-	    font-family: calibri,sans-serif;
-	    font-size: 6vw;
-	    padding: 0vh 0.5vw;
-	    color: #00b57e;
-	    background-color: #fff;
-	    border: 0.4vw solid #00b57e;
-	    border-radius: 10vw;
-	    outline: none; 
-	    user-select: none;
-	    transition: color 0.5s;
-	}
-
-	.b1:hover{
-	    color: #cc99aa;
-	  }
-
-	.lien_bouton{
-		grid-row-start: 2;
-		grid-row-end: 3;
-		grid-column-start: 8; 
-		grid-column-end: 11;
-	}
-
-	/*----- Slider -----*/
-	.container_slider{
-		height: 10.5vw;
-		background-color: #cc99aa;
-		overflow-x: hidden;
-	}
-
-	h1{
-		font-size: 3vw;
-		font-family: cursive;
-		margin: 0;
-		text-align: center;
-		vertical-align: center;
-		user-select: none;
-		position: relative;
-	}
-
-	.s1{
-		font-size: 7vw;
-		color: #fff;
-	}
-
-	.c1{
-		width: 100%;
-		animation-name: aa;
-		animation-duration: 8s;
-		animation-iteration-count: infinite;
-		position: absolute;
-		left: 100%;
-	}
-
-	@keyframes aa{
-
-		50%{
-			left: 0%;
-		}
-
-		100%{
-			left: -100%;
-		}
-	}
-
-	.s2{
-		font-size: 4vw;
-		color: #fff;	
-	}
-
-	.c2{
-		width: 100%;
-		animation-name: ab;
-		animation-duration: 8s;
-		animation-delay: 4s;
-		animation-iteration-count: infinite;
-		position: absolute;
-		left: 100%;
-	}
-
-	@keyframes ab{
-
-		50%{
-			left: 0%;
-		}
-
-		100%{
-			left: -100%;
-		}
-	}
-
-	/*----- Fin Slider -----*/
-	/*-----FIN CONTENU HEADER-----*/
-
-
-	/*-----CONTENU CENTER-----*/
-	.al{
-		width: 100%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
-		animation-name: spawn;
-		animation-duration: 5s;
-	}
-
-	.ac{
-		width: 100%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
-		animation-name: spawn;
-		animation-duration: 5s;
-	}
-
-	.ar{
-		width: 100%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
-		animation-name: spawn;
-		animation-duration: 5s;
-	}
-
-	.alc{
-		width: 100%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
-		animation-name: spawn;
-		animation-duration: 5s;
-	}
-
-	.acr{
-		width: 100%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
-		animation-name: spawn;
-		animation-duration: 5s;
-	}
-
-	.alcr{
-		width: 100%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
-		animation-name: spawn;
-		animation-duration: 5s;
-	}
-
-	h2{	
-		margin: 0;
-		padding: 0;
-		font-size: 7vw;
-		color: #00b57e;
-		font-family: calibri;
-		text-align: center;
-		user-select: none;
-	}
-
-	p{
-		font-size: 5vw;
-		color: #6b6b6b;
-		padding-bottom: 2vh;
-		font-family: calibri;
-		text-align: center;
-		user-select: none;
-	}
-
-	@keyframes spawn{
-		0%{
-			opacity: 0%;
-		}
-
-		100%{
-			opacity: 100%
-		}
-	}
-
-	img,iframe{
-		max-width: 100%;
-	}
-	/*-----FIN CONTENU CENTER-----*/
-
-
-	/*-----CONTENU RIGHT-----*/
-	.h3 {
-	    text-align: left;
-	    font-family: sans-serif;
-	    font-size: 5vw;
-	    color: #cc99aa;
-	    user-select: none;
-	    writing-mode: vertical-rl;
-	    text-orientation: mixed;
-	    animation-duration: 5s;
-	    animation-iteration-count: infinite;
-	    animation-name: scroll;
-	    position: absolute;
-	    left: 87%;
-	}
-
-	.bi{
-		height: 5vw;
-		width: 5vw;
-	}
-
-	@keyframes scroll {
-	  0% {
-	    top: 40%;
-	  }
-
-	  50% {
-	    top: 50%;
-	  }
-
-	  100% {
-	    top: 40%;
-	  }
-	}
-	/*-----FIN CONTENU RIGHT-----*/
-}
-
-@media only screen and (min-width: 1024px){
-	.container_all{
-		width: 100%;
-		height: 100%;
-		margin: 0;
-		padding: 0;
-		overflow-x: hidden;
-		display: grid;
-		grid-template-rows: 7.5vw 7.5vw 1fr;
-		grid-template-columns: 10% 80% 10%;
-		position: absolute;
-		top: 0;
-	}
-
-	.header{
-		margin: 0;
-		padding: 0;
-		grid-row-start: 1;
-		grid-row-end: 3;
-		grid-column-start: 1;
-		grid-column-end: 4;
-	}
-
-	.container_center{
-		margin: 0;
-		padding: 0;
-		background-color: #fff;
-		overflow: overlay;
+		border-bottom: 1vw solid #b37288;
 		display: flex;
-		flex-wrap: wrap;
-	}
-
-	.right_pannel{
-		width: 10%;
-		height: 81.65%;
-		margin: 0;
-		padding: 0;
-		animation-name: spawn;
-		animation-duration: 5s;
-		grid-row-start: 2;
-		grid-row-end: 3;
-		grid-column-start: 3;
-		grid-column-end: 4;
-	}
-
-	/*-----CONTENU HEADER-----*/
-	.header_content{
-		width: 100%;
-		height: 8vw;
-		margin: 0;
-		padding: 0;
-		background-color: #fff;
-		border-bottom: 0.3vw solid #b37288;
-		display: grid;
-		grid-template-rows: 10% 80% 10%;
-		grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+		flex-direction: row;
+		align-items: center;
+		justify-content: space-between;
 		position: relative;
-		top: 0;
-		left: 0;
 	}
 
-	.logo{
-		height: 100%;
-		width: auto;
-		padding-left: 5%;
-		grid-row-start: 1;
-		grid-row-end: 4;
-		grid-column-start: 1; 
-		grid-column-end: 3;
-	}
+		.header > .c_1 > .c_logo{
+			height: 14vw;
+			width: 100%;
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			justify-content: flex-start;
+		}
 
-	.link{
-		text-align: center;
-	    font-family: calibri,sans-serif;
-	    font-size: 5vw;
-	    color: #00b57e;
-		text-decoration: none;
-		transition: color 0.5s;	
-	}
+			.header > .c_1 > .c_logo > img{
+				max-height: 100%;
+				padding-left: 4vw;
+			}
 
-	.link:hover{
-		color: #cc99aa;
-	}
+			.header > .c_1 > .c_logo > h3{
+				padding-left: 3vw;
+				font-size: 6vw;
+				color: #cc99aa;
+				font-family: calibri;
+				user-select: none;
+			}
 
-	.l1{
-		grid-row-start: 2;
-		grid-row-end: 3;
-		grid-column-start: 3; 
-		grid-column-end: 5;
-	}
+		.bi-arrow-left-circle-fill{
+			max-height: 13vw;
+			margin-right: 4vw;
+			color: #b0b0b0;
+			transition: color 0.5s;
+		}
 
-	.l2{
-		grid-row-start: 2;
-		grid-row-end: 3;
-		grid-column-start: 4; 
-		grid-column-end: 8;
-	}
+		.bi-arrow-left-circle-fill:hover{
+			color: #cc99aa;
+		}
 
-	.l3{
-		grid-row-start: 2;
-		grid-row-end: 3;
-		grid-column-start: 7; 
-		grid-column-end: 9;
-	}
-
-	.b1{
-		text-align: center;
-	    font-family: calibri,sans-serif;
-	    font-size: 5vw;
-	    padding: 0vh 0.5vw;
-	    color: #00b57e;
-	    background-color: #fff;
-	    border: 0.25vw solid #00b57e;
-	    border-radius: 10vw;
-	    outline: none; 
-	    user-select: none;
-	    transition: color 0.5s;
-	}
-
-	.b1:hover{
-	    color: #cc99aa;
-	}
-
-	.lien_bouton{
-		grid-row-start: 2;
-		grid-row-end: 3;
-		grid-column-start: 8; 
-		grid-column-end: 10;
-	}
-
-	/*----- Slider -----*/
-	.container_slider{
-		height: 6vw;
+	.header > .container_slider{
+		height: 12vw;
 		background-color: #cc99aa;
-	}
-
-	h1{
-		font-size: 2vw;
-		font-family: cursive;
-		margin: 0;
-		text-align: center;
-		vertical-align: center;
-		user-select: none;
 		position: relative;
 	}
 
-	.s1{
-		font-size: 4vw;
-		color: #fff;
-	}
-
-	.c1{
-		width: 100%;
-		animation-name: aa;
-		animation-duration: 8s;
-		animation-iteration-count: infinite;
-		position: absolute;
-		left: 100%;
-	}
-
-	@keyframes aa{
-
-		50%{
-			left: 0%;
+		.header > .container_slider > .slide1{
+			height: 12vw;
+			width: 100%;
+			transition: left 2s;
+			position: absolute;
+			left: 0;
 		}
 
-		100%{
-			left: -100%;
-		}
-	}
+			.header > .container_slider > .slide1 > h1{
+				font-size: 7vw;
+				line-height: 1vw;
+				font-family: Lucida Calligraphy,calibri;
+				color:  #fff;
+				text-align: center;
+				user-select: none;
+				position: relative;
+			}
 
-	.s2{
-		font-size: 3vw;
-		color: #fff;	
-	}
-
-	.c2{
-		width: 100%;
-		animation-name: ab;
-		animation-duration: 8s;
-		animation-delay: 4s;
-		animation-iteration-count: infinite;
-		position: absolute;
-		left: 100%;
-	}
-
-	@keyframes ab{
-
-		50%{
-			left: 0%;
+		.header > .container_slider > .slide2{
+			height: 12vw;
+			width: 100%;
+			transition: left 2s;
+			position: absolute;
+			left: 100%;
 		}
 
-		100%{
-			left: -100%;
-		}
-	}
+			.header > .container_slider > .slide2 > h1{
+				font-size: 4vw;
+				line-height: 4vw;
+				font-family: Lucida Calligraphy,calibri;
+				color:  #fff;
+				text-align: center;
+				user-select: none;
+				position: relative;
+			}
 
-	/*----- Fin Slider -----*/
-	/*-----FIN CONTENU HEADER-----*/
+.container_center{
+	width: 100%;
+	overflow-y: overlay;
+	overflow-x: hidden;
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	justify-content: center;
+	flex-wrap: wrap;
+	z-index:  1;
+	position: absolute;
+	top: 26vw;
+}
 
-
-	/*-----CONTENU CENTER-----*/
-	.al{
-		width: 32%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
+	.container_center > div{
+		width: 80vw;
+		padding: 4vw 0 4vw 0;
+		border-bottom: 0.3vw solid grey;
 		animation-name: spawn;
 		animation-duration: 5s;
 	}
 
-	.ac{
-		width: 32%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
-		animation-name: spawn;
-		animation-duration: 5s;
+	.container_center > div > a{
+		text-decoration: none;
 	}
 
-	.ar{
-		width: 32%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
-		animation-name: spawn;
-		animation-duration: 5s;
+h2{
+	font-size: 9vw;
+	color: #00b57e;
+	font-family: calibri;
+	text-align: center;
+	user-select: none;
+}
+
+p{
+	font-size: 5vw;
+	color: #6b6b6b;
+	font-family: calibri;
+	text-align: center;
+	user-select: auto;
+}
+
+a{
+	text-align: center;
+	font-family: calibri;
+	font-size: 3vw;
+	color: #00b57e;
+	text-decoration: none;
+	transition: color 0.5s;	
+	position:  relative;
+}
+
+a:hover{
+	color: #cc99aa;
+}
+
+@keyframes spawn{
+	0%{
+		opacity: 0%;
 	}
 
-	.alc{
-		width: 66%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
-		animation-name: spawn;
-		animation-duration: 5s;
+	100%{
+		opacity: 100%
 	}
+}
 
-	.acr{
-		width: 66%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
-		animation-name: spawn;
-		animation-duration: 5s;
-	}
+img{
+	user-select: none;
+	max-width: 100%;
+}
 
-	.alcr{
-		width: 100%;
-		display: inline-block;
-		border-bottom: 0.1vw solid grey;
-		animation-name: spawn;
-		animation-duration: 5s;
-	}
-
-	h2{	
-		margin: 0;
-		padding: 0;
-		font-size: 4vw;
-		color: #00b57e;
-		font-family: calibri;
-		text-align: center;
-		user-select: none;
-	}
-
-	p{
-		font-size: 3vw;
-		color: #6b6b6b;
-		padding-bottom: 2vh;
-		font-family: calibri;
-		text-align: center;
-		user-select: none;
-	}
-
-	@keyframes spawn{
-		0%{
-			opacity: 0%;
-		}
-
-		100%{
-			opacity: 100%
-		}
-	}
-
-	img,iframe{
-		max-width: 100%;
-	}
-	/*-----FIN CONTENU CENTER-----*/
-
-
-	/*-----CONTENU RIGHT-----*/
-	.h3 {
-	    text-align: center;
-	    font-family: sans-serif;
-	    font-size: 2vw;
-	    color: #cc99aa;
-	    user-select: none;
-	    writing-mode: vertical-rl;
-	    text-orientation: mixed;
-	    animation-duration: 5s;
-	    animation-iteration-count: infinite;
-	    animation-name: scroll;
-	    position: absolute;
-	    left: 90%;
-	}
-
-	.bi{
-		height: 2vw;
-		width: 2vw;
-	}
-
-	@keyframes scroll {
-	  0% {
-	    top: 35%;
-	  }
-
-	  50% {
-	    top: 45%;
-	  }
-
-	  100% {
-	    top: 35%;
-	  }
-	}
-	/*-----FIN CONTENU RIGHT-----*/
+iframe{
+	user-select: none;
+	width: 80vw;
+	height: 45vw;
 }
 
 /*-----Design Scrollbar-----*/
